footer.html and header.html added

--- a/WebContent/template/footer.html
+++ b/WebContent/template/footer.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div id="home-page-footer">
+    <a href="#"><div class="about">About</div></a>
+    <a href="#"><div class="Contact">Contact</div></a>
+</div>
