--- a/WebContent/template/header.html
+++ b/WebContent/template/header.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div id="home-page-header">
+    <a href="#"><div class="all-departments">All Departments</div></a>
+    <a href="#"><div class="men-clothing">Men clothing</div></a>
+    <a href="#"><div class="women-clothing">Women Clothing</div></a>
+</div>
