--- a/WebContent/views/Home-page.html
+++ b/WebContent/views/Home-page.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+<div>
+    <h1>{{hCtrl.dataList[0].views}}</h1>
+</div>
