--- a/WebContent/template/header.html
+++ b/WebContent/template/header.html
@@ -1,5 +1,31 @@
-<div id="home-page-header">
-    <a href="#"><div class="all-departments">All Departments</div></a>
-    <a href="#"><div class="men-clothing">Men clothing</div></a>
-    <a href="#"><div class="women-clothing">Women Clothing</div></a>
-</div>
+<!--<div id="home-page-header">-->
+
+    <!--<li class="active"><a ui-sref="Home-page">Home</a></li>-->
+    <!--<li><a ui-sref="User">User</a></li>-->
+    <!--<li><a ui-sref="Product-view">Product</a></li>-->
+
+<!--</div>-->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Hollywood Movie Data Analysis</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a ui-sref="Dash-Board">Dashboard</a></li>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <input type="text" class="form-control" placeholder="Search...">
+            </form>
+        </div>
+    </div>
+</nav>
