movie service added

--- a/WebContent/views/categories/overview.html
+++ b/WebContent/views/categories/overview.html
@@ -1,24 +1,24 @@
-<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-controller="DashBoardCtrl as dCtrl">
     <h1 class="page-header">Dashboard</h1>
-
+<div>dCtrl.dataList[0].views </div>
     <div class="row placeholders">
         <div class="col-xs-6 col-sm-3 placeholder">
-            <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
+            <img data-src="dCtrl.dataList[0].image" class="img-responsive" alt="Generic placeholder thumbnail">
             <h4>Label</h4>
             <span class="text-muted">Something else</span>
         </div>
         <div class="col-xs-6 col-sm-3 placeholder">
-            <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
+            <img data-src="dCtrl.dataList[0].image" class="img-responsive" alt="Generic placeholder thumbnail">
             <h4>Label</h4>
             <span class="text-muted">Something else</span>
         </div>
         <div class="col-xs-6 col-sm-3 placeholder">
-            <img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
+            <img data-src="dCtrl.dataList[0].image" class="img-responsive" alt="Generic placeholder thumbnail">
             <h4>Label</h4>
             <span class="text-muted">Something else</span>
         </div>
         <div class="col-xs-6 col-sm-3 placeholder">
-            <img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
+            <img data-src="dCtrl.dataList[0].image" class="img-responsive" alt="Generic placeholder thumbnail">
             <h4>Label</h4>
             <span class="text-muted">Something else</span>
         </div>
